# ASL-ISL

./: .gitignore  README.md  jira_backlog_import.csv  pyproject.toml  requirements.txt
configs/: generation.yaml  isl_vocabulary.json  recognition.yaml  translation.yaml
docs/: collaboration_proposal.md  implementation_plan.md  literature_review.md  monthly_report_1.md  msasl_dataset_download.md
docs/paper_sections/: methodology.md  recognition_results.md
scripts/: build_cache.py  evaluate_recognition.py  export_gloss_vocab.py  setup_datasets.py  train_recognition.py  validate_pairs.py
src/api/: server.py
src/generation/: avatar.py
src/recognition/: dataset.py  model.py  preprocess.py
src/translation/: translator.py
src/utils/: feature_extractor.py  isl_augmentation.py  mediapipe_demo.py  metrics.py  video.py
src/web/: app.js  index.html  styles.css
tests/: test_preprocess.py
