[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aite"
version = "0.1.0"
description = "ASL-ISL Translation Engine (AITE) - Real-time cross-sign-language translation"
authors = [
    {name = "Naman Nagar"},
    {name = "Monisha Sharma"},
    {name = "Nandita R Nadig"},
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "evaluate>=0.4.0",
    "sacrebleu>=2.3.0",
    "jiwer>=3.0.0",
    "tqdm>=4.65.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Repository = "https://github.com/your-org/ASL-ISL"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["src*"]
